@@ -1,3 +1,11 @@
+Tue Jul 19 13:14:51 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
+        
+          Fixed error in generation of inheritance list for impl
+          class declaration. Thanks to Steven Hattons
+          <hattons@globalsymmetry.com> for reporting the bug.
+
 Tue Jul 19 12:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
